# excel-xll

./: .gitignore  CMakeLists.txt  LICENSE  README.md  functions.cpp
include/: IRTDServer.h  RTDTopic.h  RtdServer.h  XLCALL.H  dll.h  xllMacros.h  xllManager.h  xllRTD.h  xllTools.h  xllType.h  xllUDF.h
src/: RTDTopic.cpp  RtdServer.cpp  XLCALL.CPP  dll.cpp  xllManager.cpp  xllRTD.cpp  xllTools.cpp  xllType.cpp  xllUDF.cpp
xll/: EXCELXLL_x64.xll  EXCELXLL_x86.xll
